--- a/ragp.ipynb
+++ b/ragp.ipynb
@@ -208,6 +208,125 @@
     "results=db1.similarity_search(query)\n",
     "results[0].page_content\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "60209c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash-001\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1553095e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "prompt = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Answer the following question based ony on the provided context.\n",
+    "Think step by step before providing a detailed answer.\n",
+    "I will tip you $1000 if the usser finds the answer helpful.\n",
+    "<context>\n",
+    "{context}\n",
+    "</context>\n",
+    "Question: {input}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "88b9e86c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Chain\n",
+    "#Create stuff Document Chain\n",
+    "\n",
+    "\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "\n",
+    "document_chain=create_stuff_documents_chain(llm,prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2b115c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreRetriever(tags=['Chroma', 'GoogleGenerativeAIEmbeddings'], vectorstore=<langchain_community.vectorstores.chroma.Chroma object at 0x72ca240eaf30>, search_kwargs={})"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever=db.as_retriever()\n",
+    "retriever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b462581d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##retriever chain\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "retrieval_chain=create_retrieval_chain(retriever,document_chain)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1a7b1099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=retrieval_chain.invoke({\"input\":\"who are the authors of Attention is all you need paper.\"})  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e8e0b29e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The authors of the \"Attention Is All You Need\" paper are:\\n\\n*   Ashish Vaswani\\n*   Noam Shazeer\\n*   Niki Parmar\\n*   Jakob Uszkoreit\\n*   Llion Jones\\n*   Aidan N. Gomez\\n*   Łukasz Kaiser\\n*   Illia Polosukhin'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response[\"answer\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad3d6e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
